page size: fix logos sliding out of bounds, causing page to be wider

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,6 +1,6 @@
 /* About page styles */
 
-#about-content {
+.about-content {
   background-color: var(--color-dark-grey);
   overflow-y: scroll;
   height: calc(100dvh - 4.5rem - 5.5rem);
@@ -50,7 +50,7 @@
 }
 
 .about-bio-container {
-  width: 500px;
+  max-width: 418px;
 }
 
 .prog-languages {
@@ -86,19 +86,9 @@
 
 /* Target SVGs at any level within language-class */
 .language-class svg {
-  width: 100% !important;
-  height: 100% !important;
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
   flex-shrink: 0;
-  object-fit: contain;
-}
-
-/* Allow rectangular icons to size naturally */
-.language-rectangular svg {
-  height: 100% !important;
-  width: auto !important;
-  max-width: none !important;
 }
 
 .logo-sliding {
@@ -136,6 +126,7 @@
   animation-duration: 35s; /* how much the animation will take to complet one cycle */
   animation-iteration-count: infinite;
   animation-timing-function: linear;
+  max-width: 500px;
 }
 
 @keyframes logosliding {
@@ -146,7 +137,7 @@
 .logos > * {
   height: 3rem;
   width: 3rem;
-  margin-right: 4.7rem;
+  margin-right: 4.5rem;
 
   flex-shrink: 0; /* prevent logos from shrinking */
 }
