--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -10,6 +10,10 @@
   --color-black: rgb(0, 0, 0);
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 body {
   overflow: auto;
   font-family: "Funnel Display", "M PLUS Rounded 1c", sans-serif;
